<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/_13sdp"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/_8sdp"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        tools:listitem="@layout/item_message" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/photoPickerButton"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_gravity="center"
            android:background="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/image" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autofillHints="no"
            android:hint="@string/message_here"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="@dimen/_16ssp" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:background="@android:drawable/ic_menu_send"
            android:contentDescription="@string/send" />


    </LinearLayout>
</RelativeLayout>
